--- a/styling.css
+++ b/styling.css
@@ -144,12 +144,12 @@ body{
 }
 
 #about_me_info{
-    width: 36.5%;
+    width: auto;
 }
 /*/=============================================================/*/
 /*/=====================Form====================================/*/
     #about_me_basic{
-        width: 63.5%;
+        width: auto;
     }
 
     #form_box{
